# matrix

./: .gitignore  README.md  pyproject.toml
matrix/: argparser.py  consts.py  defaults.py  main.py  matrix.py  matrix_printer.py  typedefs.py
tests/: test_matrix.py
