[tool.poetry]
name = "matrix"
version = "0.1.0"
description = ""
authors = ["Madara <None>"]

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
